# advent-of-code-2023

./: Cargo.toml  README.md
data/examples/: 11-labeled.txt  12-notes.txt  18-notes.txt  18-output.txt  20-11.txt  20-12.txt  20-13.txt  20-14.txt  20-21.txt  20-31.txt  20-32.txt  20-33.txt  20-notes.txt
lib/aoc_helpers/: Cargo.toml
lib/aoc_helpers/examples/: grid.rs
lib/aoc_helpers/src/: fmt.rs  grid.rs  lib.rs  parsing.rs
lib/aoc_helpers/src/grid/: dir.rs  entry.rs  parse.rs
lib/aoc_helpers/src/parsing/: grid.rs  numbers.rs  separated_tuple.rs
lib/aoc_helpers_derive/: Cargo.toml
lib/aoc_helpers_derive/examples/: basic.rs  nested.rs
lib/aoc_helpers_derive/src/: lib.rs  tile.rs
lib/aoc_helpers_derive/tests/: ui_tests.rs
lib/aoc_helpers_derive/tests/ui/: basic.rs
src/: helpers.rs  lib.rs
src/helpers/: fmt.rs  grid.rs  math.rs  parsing.rs
src/template/commands/: scaffold.rs
