[package]
name = "advent_of_code"
version = "0.9.3"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["lib/aoc_helpers", "lib/aoc_helpers_derive"]

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
aoc_helpers = { path = "lib/aoc_helpers" }

glam = "0.24.2"
grid = "0.12.0"
itertools = "0.12.0"
nom = "7.1.3"
nom-supreme = "0.8.0"
pathfinding = "4.4.0"
pico-args = "0.5.0"
regex = "1.10.2"
smallvec = "1.11.2"
